###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")
bazel_dep(name = "apple_support", version = "2.3.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", repo_name = "json")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "argparse", version = "3.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "sdl2", version = "2.32.0.bcr.beta.5")

cc_compatibility_proxy = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
use_repo(cc_compatibility_proxy, "cc_compatibility_proxy")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "blargg_test_roms",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

exports_files(["cpu_instrs/individual"])
""",
    strip_prefix = "gb-test-roms-master",
    urls = ["https://github.com/retrio/gb-test-roms/archive/refs/heads/master.zip"],
)
