###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "apple_support", version = "2.3.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", repo_name = "json")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "argparse", version = "3.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "stb", version = "0.0.0-20251026-f1c79c0")
bazel_dep(name = "sdl2", version = "2.32.0.bcr.beta.5")

### Test ROMs and Data ###

cc_compatibility_proxy = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
use_repo(cc_compatibility_proxy, "cc_compatibility_proxy")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

### Blargg's test ROMs ###

http_archive(
    name = "blargg_test_roms",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

exports_files(["cpu_instrs/individual"])
""",
    strip_prefix = "gb-test-roms-master",
    url = "https://github.com/retrio/gb-test-roms/archive/refs/heads/master.zip",
)

### dmg-acid2 ROM ###

http_archive(
    name = "dmg_acid2",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

exports_files(["img/reference-dmg.png"])
""",
    strip_prefix = "dmg-acid2-master",
    url = "https://github.com/mattcurrie/dmg-acid2/archive/refs/heads/master.zip",
)

http_file(
    name = "dmg_acid2_rom",
    downloaded_file_path = "dmg-acid2.gb",
    integrity = "sha256-Rk4Ut9Quf+6gt+3kK+cHHciJE/dbn/pEQplCS2PR3/E=",
    url = "https://github.com/mattcurrie/dmg-acid2/releases/download/v1.0/dmg-acid2.gb",
)
