###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "apple_support", version = "2.3.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "4.5.2")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", repo_name = "json")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "argparse", version = "3.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "stb", version = "0.0.0-20251026-f1c79c0")
bazel_dep(name = "sdl2", version = "2.32.0.bcr.beta.5")
bazel_dep(name = "imgui", version = "1.92.6-docking.bcr.1")
bazel_dep(name = "platforms", version = "0.0.11")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "native_file_dialog",
    build_file = "@//:rules/nfd.BUILD",
    sha256 = "d865b7bf4363fa6aac095b6cfb3b29912054306a18c8c596328fb2e9141c5391",
    strip_prefix = "nativefiledialog-extended-1.3.0",
    urls = ["https://github.com/btzy/nativefiledialog-extended/archive/refs/tags/v1.3.0.zip "],
)

### Compilation Database Generation ###

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

### Python PyPi dependencies ###

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "gbemu_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.11",
)

use_repo(pip, "gbemu_pip")

### Test ROMs and Data ###

cc_compatibility_proxy = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
use_repo(cc_compatibility_proxy, "cc_compatibility_proxy")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

### Blargg's test ROMs ###

http_archive(
    name = "blargg_test_roms",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(glob(["cpu_instrs/individual/*.gb"] + ["instr_timing/instr_timing.gb"]))
""",
    integrity = "sha256-z4dBE6hT4qdSUIyUNVyi7k54gwwSh1POjfYLenYMAK8=",
    strip_prefix = "gb-test-roms-master",
    url = "https://github.com/retrio/gb-test-roms/archive/refs/heads/master.zip",
)

### dmg-acid2 ROM ###

http_archive(
    name = "dmg_acid2",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["img/reference-dmg.png"])
""",
    integrity = "sha256-xZiN2VpAAbk+mM+K74WStZGzWnoI/IsMwqSKwOPl6g4=",
    strip_prefix = "dmg-acid2-master",
    url = "https://github.com/mattcurrie/dmg-acid2/archive/refs/heads/master.zip",
)

http_file(
    name = "dmg_acid2_rom",
    downloaded_file_path = "dmg-acid2.gb",
    integrity = "sha256-Rk4Ut9Quf+6gt+3kK+cHHciJE/dbn/pEQplCS2PR3/E=",
    url = "https://github.com/mattcurrie/dmg-acid2/releases/download/v1.0/dmg-acid2.gb",
)
