load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "gbemu_exe",
    srcs = [
        "main.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gbemu/backend",
        "//gbemu/config",
        "//gbemu/frontend",
        "@argparse",
        "@stb//:stb_image_write",
    ],
)

cc_library(
    name = "gbemu_lib",
    srcs = [
        "main.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gbemu/backend",
        "//gbemu/config",
        "//gbemu/frontend",
        "@argparse",
        "@stb//:stb_image_write",
    ],
)
