load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

DEPS = [
    "//gbemu/backend",
    "//gbemu/config",
    "//gbemu/frontend",
    "//gbemu/frontend:fps_regulator",
    "@argparse",
    "@stb//:stb_image_write",
]

cc_binary(
    name = "gbemu_exe",
    srcs = [
        "main.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = DEPS,
)

cc_library(
    name = "gbemu_lib",
    srcs = [
        "main.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = DEPS,
)
