load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//gbemu:__subpackages__"])

cc_library(
    name = "alu",
    srcs = [
        "alu.cpp",
    ],
    hdrs = [
        "alu.h",
    ],
    deps = [
        ":bitutils",
    ],
)

cc_library(
    name = "bitutils",
    srcs = [],
    hdrs = [
        "bitutils.h",
    ],
)

cc_library(
    name = "cpu",
    srcs = [
        "cpu.cpp",
    ],
    hdrs = [
        "cpu.h",
    ],
    deps = [
        ":alu",
        ":bitutils",
        ":interrupt_controller",
        ":opcode",
        ":ram",
    ],
)

cc_library(
    name = "interrupt_controller",
    srcs = [
        "interrupt_controller.cpp",
    ],
    hdrs = [
        "interrupt_controller.h",
    ],
    deps = [
        ":ram",
    ],
)

cc_library(
    name = "joypad",
    srcs = [
        "joypad.cpp",
    ],
    hdrs = [
        "joypad.h",
    ],
    deps = [
        ":bitutils",
        ":ram",
    ],
)

cc_library(
    name = "opcode",
    hdrs = [
        "opcode.h",
        "opcode_data.h",
        "operand.h",
    ],
)

cc_library(
    name = "ppu",
    srcs = [
        "ppu.cpp",
    ],
    hdrs = [
        "ppu.h",
    ],
    deps = [
        ":bitutils",
        ":interrupt_controller",
        ":ram",
        ":timer",
    ],
)

cc_library(
    name = "ram",
    srcs = [
        "cartridge.cpp",
        "ram.cpp",
    ],
    hdrs = [
        "cartridge.h",
        "ram.h",
    ],
    deps = [
        ":bitutils",
    ],
)

cc_library(
    name = "timer",
    srcs = [
        "timer.cpp",
    ],
    hdrs = [
        "timer.h",
    ],
    deps = [
        ":bitutils",
        ":interrupt_controller",
        ":ram",
    ],
)

cc_library(
    name = "backend",
    srcs = [
        "gameboy.cpp",
    ],
    hdrs = [
        "gameboy.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":cpu",
        ":joypad",
        ":ppu",
        ":ram",
        ":timer",
    ],
)
