load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "dmg_acid2",
    srcs = ["dmg_acid2_harness.py"],
    data = [
        "//gbemu:gbemu_exe",
        "@dmg_acid2//:img/reference-dmg.png",
        "@dmg_acid2_rom//file",
    ],
    main = "dmg_acid2_harness.py",
    deps = [
        "//gbemu:gbemu_exe",
        "@gbemu_pip//pillow",
        "@rules_python//python/runfiles",
    ],
)
