load("//tests/blargg:blargg.bzl", "blargg_test")

[
    blargg_test(
        name = test.replace(" ", "-").replace(",", "-").replace(".", "-"),
        roms = [
            "@blargg_test_roms//:cpu_instrs/individual/{}.gb".format(test),
        ],
    )
    for test in [
        "01-special",
        "02-interrupts",
        "03-op sp,hl",
        "04-op r,imm",
        "05-op rp",
        "06-ld r,r",
        "07-jr,jp,call,ret,rst",
        "08-misc instrs",
        "09-op r,r",
        "10-bit ops",
        "11-op a,(hl)",
    ]
]
