load("//tests:gb_rom_test.bzl", "gb_rom_test")

[
    gb_rom_test(
        name = test.replace(" ", "-").replace(",", "-").replace(".", "-"),
        mode = "serial",
        rom = "@blargg_test_roms//:mem_timing/individual/{}.gb".format(test),
    )
    for test in [
        "01-read_timing",
        "02-write_timing",
        "03-modify_timing",
    ]
]
